--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-concurrent": "~0.3.0",
     "load-grunt-tasks": "~0.1.0",
     "time-grunt": "~0.1.1",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-handlebars": "~0.6.1"
   },
   "engines": {
     "node": ">=0.8.0"
