--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backbone-marionette-portfolio",
+  "name": "portfolio-for-beth",
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
